--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,4 @@
-
-<ion-content >
+<ion-content>
   <ion-list>
     <ion-item></ion-item>
     <ion-item></ion-item>
@@ -9,73 +8,71 @@
       <ion-input [(ngModel)]="visor"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-fab-button class="operacao2">
+      <ion-fab-button class="operacao2" (click)="zerar()">
         AC
       </ion-fab-button>
-      <ion-fab-button class="operacao2">
-       +/-
+      <ion-fab-button class="operacao2" (click)="inverter()">
+        +/-
       </ion-fab-button>
-      <ion-fab-button class="operacao2">
-       %
+      <ion-fab-button class="operacao2" (click)="porcentagem()">
+        %
       </ion-fab-button>
-      <ion-fab-button class="operacao">
+      <ion-fab-button class="operacao" (click)="adicionarOperacao('÷')">
         ÷
-       </ion-fab-button>
+      </ion-fab-button>
     </ion-item>
     <ion-item>
-      <ion-fab-button>
+      <ion-fab-button (click)="adicionarNumero('7')">
         7
       </ion-fab-button>
-      <ion-fab-button>
-       8
+      <ion-fab-button (click)="adicionarNumero('8')">
+        8
       </ion-fab-button>
-      <ion-fab-button>
-       9
+      <ion-fab-button (click)="adicionarNumero('9')">
+        9
       </ion-fab-button>
-      <ion-fab-button class="operacao">
+      <ion-fab-button class="operacao" (click)="adicionarOperacao('x')">
         x
-       </ion-fab-button>
+      </ion-fab-button>
     </ion-item>
     <ion-item>
-      <ion-fab-button>
+      <ion-fab-button (click)="adicionarNumero('4')">
         4
       </ion-fab-button>
-      <ion-fab-button>
-       5
+      <ion-fab-button (click)="adicionarNumero('5')">
+        5
       </ion-fab-button>
-      <ion-fab-button>
-       6
+      <ion-fab-button (click)="adicionarNumero('6')">
+        6
       </ion-fab-button>
-      <ion-fab-button class="operacao">
+      <ion-fab-button class="operacao" (click)="adicionarOperacao('-')">
         -
-       </ion-fab-button>
+      </ion-fab-button>
     </ion-item>
     <ion-item>
-      <ion-fab-button >
+      <ion-fab-button (click)="adicionarNumero('1')">
         1
       </ion-fab-button>
-      <ion-fab-button>
-       2
+      <ion-fab-button (click)="adicionarNumero('2')">
+        2
       </ion-fab-button>
-      <ion-fab-button>
-       3
+      <ion-fab-button (click)="adicionarNumero('3')">
+        3
       </ion-fab-button>
-      <ion-fab-button class="operacao">
+      <ion-fab-button class="operacao" (click)="adicionarOperacao('+')">
         +
-       </ion-fab-button>
+      </ion-fab-button>
     </ion-item>
     <ion-item>
-      <ion-fab-button id="zero">
+      <ion-fab-button id="zero" (click)="adicionarNumero('0')">
         0
-       </ion-fab-button>
-       <ion-fab-button>
+      </ion-fab-button>
+      <ion-fab-button>
         ,
-       </ion-fab-button>
-       <ion-fab-button class="operacao">
-         =
-        </ion-fab-button>
-
+      </ion-fab-button>
+      <ion-fab-button class="operacao" (click)="calcular()">
+        =
+      </ion-fab-button>
     </ion-item>
   </ion-list>
-
 </ion-content>
