--- a/ApiRickAndMorty/src/app/view/busca/busca.page.html
+++ b/ApiRickAndMorty/src/app/view/busca/busca.page.html
@@ -17,14 +17,13 @@
     </ion-segment-button>
   </ion-segment>
   <ion-list>
-    <ion-item *ngFor="let item of result | async">
+    <ion-item *ngFor="let item of result | async" [routerLink]="['/', 'busca-details', type, item.id]"    >
       <ion-avatar slot="start">
         <img *ngIf="item.image" [src]="item.image" alt="Avatar">
       </ion-avatar>
       <ion-label *ngIf="item.name">{{ item.name }}</ion-label>
       <ion-label *ngIf="item.status">Status: {{ item.status }}</ion-label>
       <ion-label *ngIf="item.type === 'episode'">Episódio: {{ item.episode }}</ion-label>
-      <!-- Adicione mais campos conforme necessário -->
     </ion-item>
   </ion-list>
   
